music slug added
