# Soundclock/config/packages/nelmio_api_doc.yaml
@@ -48,11 +48,11 @@ nelmio_api_doc:
             # Show All Banner                                             
             /api/banner:
                 get:
-                    summary: Show all Banners
+                    summary: Show all Banner
                     description: Show All Methods
                     # https://swagger.io/docs/specification/grouping-operations-with-tags/
                     tags:
-                        - Sound'Clock API Banners
+                        - Sound'Clock API Banner
                     # https://swagger.io/docs/specification/describing-parameters/
 
                     responses:
@@ -66,7 +66,7 @@ nelmio_api_doc:
                                             type: string
         
             # Show One By ID Banner                                             
-            /api/banner/{id}:
+            /api/banners/{id}:
                 get:
                     summary: Show One By ID Banner
                     description: Show One By ID Methods
@@ -113,7 +113,7 @@ nelmio_api_doc:
                                             type: string
             
             # Show One By Id Genre 
-            /api/genre/{id}:
+            /api/genres/{id}:
                 get:
                     summary: Show One By ID Genre
                     description: Show One By ID Methods
@@ -131,6 +131,79 @@ nelmio_api_doc:
                     responses:
                         '200':
                             description: Show One By ID Genre
+                            content:
+                                application/json:
+                                    schema: 
+                                        type: array
+                                        items: 
+                                            type: string
+        
+        # Entity Music
+            # Show All Music
+            /api/music:
+                get:
+                    summary: Show all Music
+                    description: Show All Methods
+                    # https://swagger.io/docs/specification/grouping-operations-with-tags/
+                    tags:
+                        - Sound'Clock API Music
+                    # https://swagger.io/docs/specification/describing-parameters/
+
+                    responses:
+                        '200':
+                            description: Show All Methods
+                            content:
+                                application/json:
+                                    schema: 
+                                        type: array
+                                        items: 
+                                            type: string
+            
+            # Show One By Id Music 
+            /api/musics/{id}:
+                get:
+                    summary: Show One By ID Music
+                    description: Show One By ID Methods
+                    # https://swagger.io/docs/specification/grouping-operations-with-tags/
+                    tags:
+                        - Sound'Clock API Music
+                    # https://swagger.io/docs/specification/describing-parameters/
+                    parameters:
+                      - in: path
+                        name: id
+                        schema:
+                            type: integer
+                        required: true
+
+                    responses:
+                        '200':
+                            description: Show One By ID Music
+                            content:
+                                application/json:
+                                    schema: 
+                                        type: array
+                                        items: 
+                                            type: string
+
+            # Show One By Slug Music 
+            /api/music/{slug_music}:
+                get:
+                    summary: Show One By Slug Music
+                    description: Show One By Slug Methods
+                    # https://swagger.io/docs/specification/grouping-operations-with-tags/
+                    tags:
+                        - Sound'Clock API Music
+                    # https://swagger.io/docs/specification/describing-parameters/
+                    parameters:
+                      - in: path
+                        name: slug_music
+                        schema:
+                            type: string
+                        required: true
+
+                    responses:
+                        '200':
+                            description: Show One By ID Music
                             content:
                                 application/json:
                                     schema: 
